HTMLの画像のリンクを修正

--- a/TestFlightApp.html
+++ b/TestFlightApp.html
@@ -29,23 +29,23 @@
 
 <p>このメールはiPhone、iPod touch、またはiPadで開いて下さい。  </p>
 
-<p><img id="" src="../../../raw/master/images/img01.png" alt="" title="" /> <br />
+<p><img id="" src="../../raw/master/images/img01.png" alt="" title="" /> <br />
 <strong>↑ ~@i.softbank.jpまたはPCのメールアドレスでメールを受け取った場合。</strong>  </p>
 
-<p><img id="" src="../../../raw/master/images/img02.png" alt="" title="" /> <br />
+<p><img id="" src="../../raw/master/images/img02.png" alt="" title="" /> <br />
 <strong>↑ ~@softbank.ne.jpでメールを受け取った場合。</strong>  </p>
 
 <p>メール中の<strong>[招待受け取る]</strong>リンクをタップします。 <br />
 リンクをタップすると、登録画面に移動します。   </p>
 
-<p><img id="" src="../../../raw/master/images/img03.png" alt="" title="" /></p>
+<p><img id="" src="../../raw/master/images/img03.png" alt="" title="" /></p>
 
 <p>項目をこのように埋めて、<strong>Sigin Up >></strong>ボタンをタップして下さい。  </p>
 
 <p>ここで登録した名前は、開発者が確認することができます。 <br />
 必ずしも実名を入力する必要はありません。  </p>
 
-<p><img id="" src="../../../raw/master/images/img04.png" alt="" title="" /></p>
+<p><img id="" src="../../raw/master/images/img04.png" alt="" title="" /></p>
 
 <p>登録が完了すると、このように<strong>Invitation Accepted!</strong>と表示されます。  </p>
 
@@ -60,19 +60,19 @@
 
 <p><strong>端末識別番号を利用する方法は、いわゆる脱獄(jailbreak)とは違い、Apple公式の手順です。</strong></p>
 
-<p><img id="" src="../../../raw/master/images/img05.png" alt="" title="" /> <br />
+<p><img id="" src="../../raw/master/images/img05.png" alt="" title="" /> <br />
 まず、<strong>Go to your Dashboard >></strong>ボタンをタップして下さい。  </p>
 
-<p><img id="" src="../../../raw/master/images/img06.png" alt="" title="" /> <br />
+<p><img id="" src="../../raw/master/images/img06.png" alt="" title="" /> <br />
 次に、<strong>Register Device</strong>ボタンをタップして、プロファイルをインストールします。  </p>
 
-<p><img id="" src="../../../raw/master/images/img06.png" alt="" title="" /> <br />
-<img id="" src="../../../raw/master/images/img07.png" alt="" title="" /> <br />
-<img id="" src="../../../raw/master/images/img08.png" alt="" title="" /></p>
+<p><img id="" src="../../raw/master/images/img06.png" alt="" title="" /> <br />
+<img id="" src="../../raw/master/images/img07.png" alt="" title="" /> <br />
+<img id="" src="../../raw/master/images/img08.png" alt="" title="" /></p>
 
 <p>完了を押すと、プロファイルのインストールは終了です。    </p>
 
-<p><img id="" src="../../../raw/master/images/img09.png" alt="" title="" /> <br />
+<p><img id="" src="../../raw/master/images/img09.png" alt="" title="" /> <br />
 ホーム画面にTestFlightのアイコンが追加されています。  </p>
 
 <p>ここまでが、初回だけの作業になります。</p>
@@ -95,7 +95,7 @@
 
 <p>というタイトルのメールが届きます。  </p>
 
-<p><img id="" src="../../../raw/master/images/img10.png" alt="" title="" /> <br />
+<p><img id="" src="../../raw/master/images/img10.png" alt="" title="" /> <br />
 メール中の<strong>Install</strong>ボタンをタップすると、インストールを開始します。  </p>
 
 <h3 id="">アプリをインストールできない場合の対処</h3>
