ライセンスの表記を修正

--- a/TestFlightApp.html
+++ b/TestFlightApp.html
@@ -100,11 +100,13 @@
 
 <h3 id="">アプリをインストールできない場合の対処</h3>
 
-<p>1時間程待ってもアプリをインストールできない場合は開発者(開発者の連絡先)へご連絡ください。  </p>
+<p>しばらく待って、もう一度試してみて下さい。 <br />
+1時間程待ってもアプリをインストールできない場合は開発者(開発者の連絡先)へご連絡ください。  </p>
 
 <h4 id="">クレジット</h4>
 
-<p>原著作者 <a href="https://twitter.com/yomoapp">yomoapp</a> <br />
+<p><a href="http://creativecommons.org/licenses/by-sa/2.1/jp/">CCライセンス 表示-継承</a> <br />
+原著作者 <a href="https://twitter.com/yomoapp">yomoapp</a> <br />
 URL <a href="https://github.com/hayashi311/YMTestFlightInfo">YMTestFlightInfo</a>  </p>
 </body>
 </html>
