--- a/TestFlightApp.html
+++ b/TestFlightApp.html
@@ -4,20 +4,20 @@
 	<head>
 		<meta name="Format" content="complete" />
 	</head>
-<body>
-<h3 id="testflight">TestFlightとは</h3>
+  <body>
+    <h3 id="testflight">TestFlightとは</h3>
 
-<p><strong><a href="#testflight" title="TestFlightへの招待を受け取ったら">TestFlight</a></strong>はAppStoreに並んでいないiPhoneアプリを簡単にインストールするためのサービスです。  </p>
+<p><strong><a href="http://testflightapp.com">TestFlight</a></strong>はAppStoreに並んでいないiPhoneアプリを簡単にインストールするためのサービスです。  </p>
 
-<p>この<strong><a href="#testflight" title="TestFlightへの招待を受け取ったら">TestFlight</a></strong>を使うことで、次のようなメリットがあります。  </p>
+<p>この<strong><a href="http://testflightapp.com">TestFlight</a></strong>を使うことで、次のようなメリットがあります。  </p>
 
-<p><strong>- リリース前のアプリを無料で使うことができる</strong> <br />
+<p><strong>- リリース前のアプリを無料で使うことができる</strong><br />
 <strong>- Appleの審査(1週間~10日程)を通さず、すぐに使うことができる</strong>  </p>
 
-<p><strong><a href="#testflight" title="TestFlightへの招待を受け取ったら">TestFlight</a></strong>からアプリをダウンロードするためには、テスターとして開発者から招待される必要があります。 <br />
+<p><strong><a href="http://testflightapp.com">TestFlight</a></strong>からアプリをダウンロードするためには、テスターとして開発者から招待される必要があります。<br />
 　  </p>
 
-<h3 id="testflight">TestFlightへの招待を受け取ったら</h3>
+<h3 id="testflight-1">TestFlightへの招待を受け取ったら</h3>
 
 <p>開発者から招待を受け取った後、TestFlightへ登録し、端末の情報を開発者へ送る必要があります。<strong>これは初回だけの作業です。</strong>  </p>
 
@@ -29,23 +29,23 @@
 
 <p>このメールはiPhone、iPod touch、またはiPadで開いて下さい。  </p>
 
-<p><img id="" src="../../raw/master/images/img01.png" alt="" title="" /> <br />
+<p><img src="./images/img01.png" alt="" /><br />
 <strong>↑ ~@i.softbank.jpまたはPCのメールアドレスでメールを受け取った場合。</strong>  </p>
 
-<p><img id="" src="../../raw/master/images/img02.png" alt="" title="" /> <br />
+<p><img src="./images/img02.png" alt="" /><br />
 <strong>↑ ~@softbank.ne.jpでメールを受け取った場合。</strong>  </p>
 
-<p>メール中の<strong>[招待受け取る]</strong>リンクをタップします。 <br />
+<p>メール中の<strong>[招待受け取る]</strong>リンクをタップします。<br />
 リンクをタップすると、登録画面に移動します。   </p>
 
-<p><img id="" src="../../raw/master/images/img03.png" alt="" title="" /></p>
+<p><img src="./images/img03.png" alt="" /></p>
 
-<p>項目をこのように埋めて、<strong>Sigin Up >></strong>ボタンをタップして下さい。  </p>
+<p>項目をこのように埋めて、<strong>Sigin Up »</strong>ボタンをタップして下さい。  </p>
 
-<p>ここで登録した名前は、開発者が確認することができます。 <br />
+<p>ここで登録した名前は、開発者が確認することができます。<br />
 必ずしも実名を入力する必要はありません。  </p>
 
-<p><img id="" src="../../raw/master/images/img04.png" alt="" title="" /></p>
+<p><img src="./images/img04.png" alt="" /></p>
 
 <p>登録が完了すると、このように<strong>Invitation Accepted!</strong>と表示されます。  </p>
 
@@ -55,35 +55,35 @@
 
 <p><strong>次に、iOSデバイスの登録を行います。</strong>  </p>
 
-<p>ここでは、端末識別番号をTestFlightと開発者へ送信することになります。 <br />
+<p>ここでは、端末識別番号をTestFlightと開発者へ送信することになります。<br />
 ( AppStoreを経由せずに ) お使いのiOSデバイスでインストール可能なアプリを作成するためには、端末識別番号が必要になります。  </p>
 
 <p><strong>端末識別番号を利用する方法は、いわゆる脱獄(jailbreak)とは違い、Apple公式の手順です。</strong></p>
 
-<p><img id="" src="../../raw/master/images/img05.png" alt="" title="" /> <br />
-まず、<strong>Go to your Dashboard >></strong>ボタンをタップして下さい。  </p>
+<p><img src="./images/img05.png" alt="" /><br />
+まず、<strong>Go to your Dashboard »</strong>ボタンをタップして下さい。  </p>
 
-<p><img id="" src="../../raw/master/images/img06.png" alt="" title="" /> <br />
+<p><img src="./images/img06.png" alt="" /> <br />
 次に、<strong>Register Device</strong>ボタンをタップして、プロファイルをインストールします。  </p>
 
-<p><img id="" src="../../raw/master/images/img06.png" alt="" title="" /> <br />
-<img id="" src="../../raw/master/images/img07.png" alt="" title="" /> <br />
-<img id="" src="../../raw/master/images/img08.png" alt="" title="" /></p>
+<p><img src="./images/img06.png" alt="" /><br />
+<img src="./images/img07.png" alt="" /><br />
+<img src="./images/img08.png" alt="" /></p>
 
 <p>完了を押すと、プロファイルのインストールは終了です。    </p>
 
-<p><img id="" src="../../raw/master/images/img09.png" alt="" title="" /> <br />
+<p><img src="./images/img09.png" alt="" /><br />
 ホーム画面にTestFlightのアイコンが追加されています。  </p>
 
 <p>ここまでが、初回だけの作業になります。</p>
 
-<p>登録した情報を使い、開発者がアプリを作成します。 <br />
+<p>登録した情報を使い、開発者がアプリを作成します。<br />
 アプリがインストール可能になるまで、しばらくお待ちください。  </p>
 
-<p>また、登録が終わると、開発者に通知が届きます。 <br />
+<p>また、登録が終わると、開発者に通知が届きます。<br />
 登録終了のメールを送っていただく必要はありません。  </p>
 
-<h3 id="">アプリのインストール</h3>
+<h3 id="section">アプリのインストール</h3>
 
 <p>アプリのインストールは非常に簡単です。  </p>
 
@@ -95,18 +95,20 @@
 
 <p>というタイトルのメールが届きます。  </p>
 
-<p><img id="" src="../../raw/master/images/img10.png" alt="" title="" /> <br />
+<p><img src="./images/img10.png" alt="" /><br />
 メール中の<strong>Install</strong>ボタンをタップすると、インストールを開始します。  </p>
 
-<h3 id="">アプリをインストールできない場合の対処</h3>
+<h3 id="section-1">アプリをインストールできない場合の対処</h3>
 
-<p>しばらく待って、もう一度試してみて下さい。 <br />
+<p>しばらく待って、もう一度試してみて下さい。<br />
 1時間程待ってもアプリをインストールできない場合は開発者(開発者の連絡先)へご連絡ください。  </p>
 
-<h4 id="">クレジット</h4>
+<h4 id="section-2">クレジット</h4>
 
-<p><a href="http://creativecommons.org/licenses/by-sa/2.1/jp/">CCライセンス 表示-継承</a> <br />
-原著作者 <a href="https://twitter.com/yomoapp">yomoapp</a> <br />
+<p><a href="http://creativecommons.org/licenses/by-sa/2.1/jp/">CCライセンス 表示-継承</a><br />
+原著作者 <a href="https://twitter.com/yomoapp">yomoapp</a><br />
 URL <a href="https://github.com/hayashi311/YMTestFlightInfo">YMTestFlightInfo</a>  </p>
-</body>
+
+
+  </body>
 </html>
